fix(913): added extra spacing under search form and increased text input height

--- a/components/01-atoms/controls/cta/_yds-cta.scss
+++ b/components/01-atoms/controls/cta/_yds-cta.scss
@@ -136,6 +136,10 @@ $cta-outline-weights: (
 
 .cta {
   @include cta;
+
+  .form--inline & {
+    height: 100%;
+  }
 }
 
 // @TODO: Temporary place for this
